          several adapters in the same web.xml. Reworked the Javadocs
          to encourage usage of Servlet init parameters instead of
          context parameters.
        - Refactored connector extensions to move implementation 
          classes in "internal" packages hidden from the Javadocs.
        - Upgraded Jetty to version 7.0.0.
 
- 2.0 Milestone 5 (2009-09-28)
    - API changes
        - Moved Message, Request and Response classes from the
          org.restlet.data to the org.restlet package as they are
          core artifacts of the API used in Uniform interface.
        - Deprecated Redirector.MODE_DISPATCHER to introduce support
          for MODE_CLIENT_DISPATCHER and MODE_SERVER_DISPATCHER.
        - ServerResource#getPreferredVariant() is now protected.
        - Moved Template and Variable classes from "org.restlet.util"
          to "org.restlet.routing" package.
        - Moved Restlet#handle(Request) method to Client class.
        - Added "inboundRoot" and "outboundRoot" properties to 
          Application and deprecated the "root" property and the 
          createRoot() method. The outbound root, is the hook for 
          client-side routing and points by default to the context's 
          client dispatcher, but can be changed by the user to do 
          custom routing/filtering. New createInboundRoot() and 
          createOutboundRoot() methods can be overriden.
        - The ServerResource#getVariants() method now returns a 
          modifiable list of variants instead of a map.
        - Refactored the ServerResource class so that annotated methods
          are invoked through the regular get(), get(Variant), post(),
          post(Variant) methods instead of using a separate call path.
        - ServerResource now has protected getConverterService() and
          getMetadataService() methods.
    - Bugs fixed
        - Added Simple extension to the JEE edition.
          Reported by Dustin Jenkins.